# facemotion

./: .gitignore  readme.md
landmarks/: CMakeLists.txt  landmarks detection.ipynb  landmarks.cpp  landmarks.hpp
sample/: image.ipynb
src/hollisticTrainning/: Landmarks CKPlus Viewer (0).ipynb  LandmarksPath CKPlus Precomputed (1).ipynb  Patch regression.ipynb  opencv.ipynb
src/landmarks/: main.cpp
